[project]
name = "connectomics-at-cosyne"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "caveclient>=8.0.1",
    "cloud-volume>=12.12.0",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "matplotlib>=3.10.8",
    "ossify[all,full]>=0.0.4",
    "seaborn>=0.13.2",
    "standard-transform>=1.4.1",
]
